k8s.ingress.dev.yaml
# k8s.ingress.dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls: # for https
    - hosts:
        - SOME_HOST
      secretName: my-certificate
  rules:
    - host: SOME_HOST
      http:
        paths:
          - path: /
            backend:
              serviceName: my-frontend-svc
              servicePort: 80
